# pysrbup

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  backup_system.proto  backup_system_client.py  backup_system_server.py  client.py  environment.yml  main.py  pylintrc  pyproject.toml  setup.py  test_upload_and_restore_backup.py
client/: client.py
proto_files/: backup_system.proto
pysrbup/: client.py  main.py  server.py  test_upload_and_restore.py
tests/: test_upload_and_restore.py
tests/data/: sample1.txt
tests_dir/: sample2.txt  sample3.txt
tools/: build.sh
