[tool.poetry]
name = 'pysrbup'
version = '0.1.0a1'
description = 'Secure distributed backups'
license = 'MIT'
authors = ['dor98']
repository = 'https://github.com/dor98/keydope'
homepage = 'https://github.com/dor98/keydope'
readme = 'README.md'
include = ['pysrbup']
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Microsoft :: Windows :: Windows 10',
]
keywords = ['backups', 'encryption', 'compression']

[tool.poetry.dependencies]
python = '^3.6'
cryptography = '^3.2'
grpcio = '^1.26'
grpcio-tools = '^1.26'

[tool.poetry.dev-dependencies]
isort = '^4.3'
jedi = '^0.15.2'
pycodestyle = '^2.5'
pydocstyle = '^5.0'
pylint = '^2.4'
pytest = '^5.3'
pytype = '^2020'
tox = '^3.14'
pytest-cov = '^2.6'
coverage = '^4.4.2'

[tool.poetry.scripts]
pysrbup-client = 'pysrbup.client:main'
pysrbup-server = 'pysrbup.server:main'

[build-system]
requires = ['poetry>=1.0']
build-backend = 'poetry.masonry.api'
